Fixed inventory not displaying results properly
Signed-off-by: Gabibag <97263038+Gabibag@users.noreply.github.com>